apps/anylink/templates/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: anylink-vpn
  namespace: anylink
  annotations:
    metallb.universe.tf/address-pool: homelab
    external-dns.alpha.kubernetes.io/hostname: anylink.itruslan.ru
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: anylink
  ports:
    - name: vpn-tcp
      port: 443
      targetPort: 443
      protocol: TCP
    - name: vpn-udp
      port: 443
      targetPort: 443
      protocol: UDP
  sessionAffinity: ClientIP
