apps/anylink/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: anylink-admin-redirect
  namespace: anylink
spec:
  parentRefs:
    - name: homelab
      namespace: gateway
      sectionName: http
  hostnames:
    - anylink-admin.itruslan.ru
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: anylink-admin
  namespace: anylink
  annotations:
    external-dns.alpha.kubernetes.io/hostname: anylink-admin.itruslan.ru
spec:
  parentRefs:
    - name: homelab
      namespace: gateway
      sectionName: https
  hostnames:
    - anylink-admin.itruslan.ru
  rules:
    - backendRefs:
        - name: anylink
          port: 8800
