apps/anylink/templates/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: anylink-admin
  namespace: anylink
  annotations:
    external-dns.alpha.kubernetes.io/hostname: anylink-admin.itruslan.ru
    external-dns.alpha.kubernetes.io/target: "192.168.99.222"
spec:
  parentRefs:
    - name: homelab
      namespace: gateway
      sectionName: tls-passthrough
  hostnames:
    - anylink-admin.itruslan.ru
  rules:
    - backendRefs:
        - name: anylink
          port: 8800
